--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,12 @@
   "author": "Anna Tatinyan",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mysql2": "^1.5.3",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   }
