--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "is-empty": "^1.2.0",
     "mysql2": "^1.5.3",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
+    "react-router-redux": "^5.0.0-alpha.9",
     "sequelize": "^4.38.0",
-    "sequelize-cli": "^4.0.0"
+    "sequelize-cli": "^4.0.0",
+    "validator": "^10.4.0"
   }
 }
