--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
