--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "author": "Anna Tatinyan",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.3.0",
     "mysql2": "^1.5.3",
     "react-router-redux": "^5.0.0-alpha.9",
     "sequelize": "^4.38.0",
