--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-icons-kit": "^1.1.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-sidenav": "^2.1.3",
     "react-validation": "^3.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
